add filter for bash prompts

--- a/docs/manual/src/style.css
+++ b/docs/manual/src/style.css
@@ -493,7 +493,8 @@ code span.dv {
   color: var(--color-secondary);
 }
 
-.bash span.ex {
+/* Bash prompt styling */
+.bash .prompt {
   user-select: none;
   color: var(--color-fg-muted);
 }
