--- a/docs/manual/src/style.css
+++ b/docs/manual/src/style.css
@@ -110,7 +110,7 @@ h1 { font-size: 2.5rem; }
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.25rem; }
 
-p, ul, ol, details {
+p, ul, ol, details, pre {
   margin-bottom: 1rem;
 }
 
@@ -125,15 +125,16 @@ a {
 
 pre, code {
   font-family: var(--font-family-code);
-  font-size: .95rem;
-}
-
-code {
+  font-size: .9rem;
 }
 
 pre {
   padding: 1rem;
   overflow-x: auto;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  background-color: var(--color-bg-muted);
+
 }
 
 pre code {
@@ -188,7 +189,7 @@ details[open]::details-content {
 
 /* Admonitions */
 .callout {
-  padding: .5rem 1rem;
+  padding: 1rem;
   margin-bottom: 1rem;
   border: 0;
   border-left-width: 4px;
@@ -527,7 +528,5 @@ code span.dv {
   color: var(--color-fg-muted);
 }
 .bash {
-  white-space: pre-wrap;
-  word-break: break-all;
 }
 
