--- a/docs/manual/src/style.css
+++ b/docs/manual/src/style.css
@@ -140,6 +140,18 @@ pre {
 pre code {
 }
 
+kbd {
+  display: inline-block;
+  padding: .25em .25em;
+  line-height: 1;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  background-color: var(--color-bg-muted);
+  font-size: .875em;
+  font-family: var(--font-family-headings);
+  text-transform: uppercase;
+}
+
 details {
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
